--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,23 @@
 #spring.datasource.password=iamthebest1974
 frontend.url= http://localhost:4200
 
-spring.datasource.url=jdbc:h2:mem:testdb1
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb1
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:mysql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
+spring.datasource.username=${PROD_DB_USERNAME}
+spring.datasource.password=${PROD_DB_PASSWORD}
+spring.datasource.hikari.auto-commit=false
+# Hibernate settings
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
 
 spring.servlet.multipart.enabled=true
 
@@ -20,6 +29,6 @@ spring.servlet.multipart.enabled=true
 #spring.servlet.multipart.max-file-size=2000MB
 ## Max Request Size
 #spring.servlet.multipart.max-request-size=2150MB
-spring.servlet.multipart.max-file-size=20GB
-spring.servlet.multipart.max-request-size=20GB
+spring.servlet.multipart.max-file-size=1GB
+spring.servlet.multipart.max-request-size=1GB
 spring.servlet.multipart.resolve-lazily=true
